// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`References Component > Snapshot Tests > should match desktop snapshot 1`] = `
<div
  style="background-color: white; padding: 10vh 10vw;"
>
  <div
    style="max-width: 1200px; margin: 0px auto;"
  >
    <h2
      style="text-align: center; color: var(--dark); font-size: 3.6rem; margin-bottom: 2vh;"
    >
      Publications and References
    </h2>
    <p
      style="text-align: center; color: var(--grey); font-size: 1.8rem; max-width: 800px; margin: 0px auto 6vh auto;"
    >
      DOSIMEX is cited in numerous scientific publications and reference articles in radiation protection.
    </p>
    <div
      style="display: flex; flex-direction: row; gap: 3vw; justify-content: center; align-items: stretch;"
    >
      <div
        style="background-color: var(--grey-bg); padding: 4vh 3vw; border-radius: 20px; flex: 1 1 0%; display: flex; flex-direction: column; max-width: 500px;"
      >
        <h3
          style="color: var(--dark); font-size: 2.4rem; margin-bottom: 2vh;"
        >
          Operational Radiation Protection Articles
        </h3>
        <p
          style="color: var(--grey); font-size: 1.6rem; margin-bottom: 3vh; line-height: 1.6; flex: 1 1 0%;"
        >
          Compilation of articles and publications where DOSIMEX is used as a reference.
        </p>
        <a
          href="#"
          rel="noreferrer noopener"
          style="padding: 8px 25px; border: 2px solid var(--main); border-radius: 50px; color: var(--main); text-transform: uppercase; transition: all 0.3s ease 0s; display: flex; align-items: center; justify-content: center; gap: 10px; width: fit-content; margin-top: auto; text-decoration: none; font-size: 1.6rem;"
          target="_blank"
        >
          Download
          <img
            alt="icône télécharger"
            src="/Images/icon_download.png"
            style="width: 1.2vw; min-width: 20px;"
          />
        </a>
      </div>
      <div
        style="background-color: var(--grey-bg); padding: 4vh 3vw; border-radius: 20px; flex: 1 1 0%; display: flex; flex-direction: column; max-width: 500px;"
      >
        <h3
          style="color: var(--dark); font-size: 2.4rem; margin-bottom: 2vh;"
        >
          Academic Publications and Research
        </h3>
        <p
          style="color: var(--grey); font-size: 1.6rem; margin-bottom: 3vh; line-height: 1.6; flex: 1 1 0%;"
        >
          Selection of academic publications and scientific research citing DOSIMEX.
        </p>
        <a
          href="#"
          rel="noreferrer noopener"
          style="padding: 8px 25px; border: 2px solid var(--main); border-radius: 50px; color: var(--main); text-transform: uppercase; transition: all 0.3s ease 0s; display: flex; align-items: center; justify-content: center; gap: 10px; width: fit-content; margin-top: auto; text-decoration: none; font-size: 1.6rem;"
          target="_blank"
        >
          Download
          <img
            alt="icône télécharger"
            src="/Images/icon_download.png"
            style="width: 1.2vw; min-width: 20px;"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`References Component > Snapshot Tests > should match mobile snapshot 1`] = `
<div
  style="background-color: white; padding: 8vh 5vw;"
>
  <div
    style="max-width: 1200px; margin: 0px auto;"
  >
    <h2
      style="text-align: center; color: var(--dark); font-size: 3rem; margin-bottom: 2vh;"
    >
      Publications and References
    </h2>
    <p
      style="text-align: center; color: var(--grey); font-size: 1.6rem; max-width: 800px; margin: 0px auto 6vh auto;"
    >
      DOSIMEX is cited in numerous scientific publications and reference articles in radiation protection.
    </p>
    <div
      style="display: flex; flex-direction: column; gap: 4vh; justify-content: center; align-items: stretch;"
    >
      <div
        style="background-color: var(--grey-bg); padding: 4vh 4vw; border-radius: 20px; flex: 1 1 0%; display: flex; flex-direction: column; max-width: 100%;"
      >
        <h3
          style="color: var(--dark); font-size: 2rem; margin-bottom: 2vh;"
        >
          Operational Radiation Protection Articles
        </h3>
        <p
          style="color: var(--grey); font-size: 1.4rem; margin-bottom: 3vh; line-height: 1.6; flex: 1 1 0%;"
        >
          Compilation of articles and publications where DOSIMEX is used as a reference.
        </p>
        <a
          href="#"
          rel="noreferrer noopener"
          style="padding: 8px 25px; border: 2px solid var(--main); border-radius: 50px; color: var(--main); text-transform: uppercase; transition: all 0.3s ease 0s; display: flex; align-items: center; justify-content: center; gap: 10px; width: fit-content; margin-top: auto; text-decoration: none; font-size: 1.4rem;"
          target="_blank"
        >
          Download
          <img
            alt="icône télécharger"
            src="/Images/icon_download.png"
            style="width: 4.7vw; max-width: 20px;"
          />
        </a>
      </div>
      <div
        style="background-color: var(--grey-bg); padding: 4vh 4vw; border-radius: 20px; flex: 1 1 0%; display: flex; flex-direction: column; max-width: 100%;"
      >
        <h3
          style="color: var(--dark); font-size: 2rem; margin-bottom: 2vh;"
        >
          Academic Publications and Research
        </h3>
        <p
          style="color: var(--grey); font-size: 1.4rem; margin-bottom: 3vh; line-height: 1.6; flex: 1 1 0%;"
        >
          Selection of academic publications and scientific research citing DOSIMEX.
        </p>
        <a
          href="#"
          rel="noreferrer noopener"
          style="padding: 8px 25px; border: 2px solid var(--main); border-radius: 50px; color: var(--main); text-transform: uppercase; transition: all 0.3s ease 0s; display: flex; align-items: center; justify-content: center; gap: 10px; width: fit-content; margin-top: auto; text-decoration: none; font-size: 1.4rem;"
          target="_blank"
        >
          Download
          <img
            alt="icône télécharger"
            src="/Images/icon_download.png"
            style="width: 4.7vw; max-width: 20px;"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`References Component > Snapshot Tests > should match snapshot with hover state 1`] = `
<div
  style="background-color: white; padding: 10vh 10vw;"
>
  <div
    style="max-width: 1200px; margin: 0px auto;"
  >
    <h2
      style="text-align: center; color: var(--dark); font-size: 3.6rem; margin-bottom: 2vh;"
    >
      Publications and References
    </h2>
    <p
      style="text-align: center; color: var(--grey); font-size: 1.8rem; max-width: 800px; margin: 0px auto 6vh auto;"
    >
      DOSIMEX is cited in numerous scientific publications and reference articles in radiation protection.
    </p>
    <div
      style="display: flex; flex-direction: row; gap: 3vw; justify-content: center; align-items: stretch;"
    >
      <div
        style="background-color: var(--grey-bg); padding: 4vh 3vw; border-radius: 20px; flex: 1 1 0%; display: flex; flex-direction: column; max-width: 500px;"
      >
        <h3
          style="color: var(--dark); font-size: 2.4rem; margin-bottom: 2vh;"
        >
          Operational Radiation Protection Articles
        </h3>
        <p
          style="color: var(--grey); font-size: 1.6rem; margin-bottom: 3vh; line-height: 1.6; flex: 1 1 0%;"
        >
          Compilation of articles and publications where DOSIMEX is used as a reference.
        </p>
        <a
          href="#"
          rel="noreferrer noopener"
          style="padding: 8px 25px; border: 2px solid var(--main); border-radius: 50px; color: white; text-transform: uppercase; transition: all 0.3s ease 0s; display: flex; align-items: center; justify-content: center; gap: 10px; width: fit-content; margin-top: auto; text-decoration: none; font-size: 1.6rem; transform: translateY(-4px); box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1); background-color: var(--main);"
          target="_blank"
        >
          Download
          <img
            alt="icône télécharger"
            src="/Images/icon_download.png"
            style="width: 1.2vw; min-width: 20px;"
          />
        </a>
      </div>
      <div
        style="background-color: var(--grey-bg); padding: 4vh 3vw; border-radius: 20px; flex: 1 1 0%; display: flex; flex-direction: column; max-width: 500px;"
      >
        <h3
          style="color: var(--dark); font-size: 2.4rem; margin-bottom: 2vh;"
        >
          Academic Publications and Research
        </h3>
        <p
          style="color: var(--grey); font-size: 1.6rem; margin-bottom: 3vh; line-height: 1.6; flex: 1 1 0%;"
        >
          Selection of academic publications and scientific research citing DOSIMEX.
        </p>
        <a
          href="#"
          rel="noreferrer noopener"
          style="padding: 8px 25px; border: 2px solid var(--main); border-radius: 50px; color: var(--main); text-transform: uppercase; transition: all 0.3s ease 0s; display: flex; align-items: center; justify-content: center; gap: 10px; width: fit-content; margin-top: auto; text-decoration: none; font-size: 1.6rem;"
          target="_blank"
        >
          Download
          <img
            alt="icône télécharger"
            src="/Images/icon_download.png"
            style="width: 1.2vw; min-width: 20px;"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
